// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`APM API tests basic apm_8.0.0 Service overview instances detailed statistics when data is loaded fetching data with comparison returns the right data for current and previous periods 5`] = `
Object {
  "currentPeriod": Object {
    "974d235c34fe915c11a0dbebc96688ad6c103ff7bbad4be82607b39e41a0e332": Object {
      "cpuUsage": Array [
        Object {
          "x": 1627322520000,
          "y": 0.0015,
        },
        Object {
          "x": 1627322580000,
          "y": 0.001,
        },
        Object {
          "x": 1627322640000,
          "y": 0.002,
        },
        Object {
          "x": 1627322700000,
          "y": 0.001,
        },
        Object {
          "x": 1627322760000,
          "y": 0.0015,
        },
        Object {
          "x": 1627322820000,
          "y": 0.0015,
        },
        Object {
          "x": 1627322880000,
          "y": 0.002,
        },
        Object {
          "x": 1627322940000,
          "y": 0.0025,
        },
        Object {
          "x": 1627323000000,
          "y": 0.004,
        },
        Object {
          "x": 1627323060000,
          "y": 0.0015,
        },
        Object {
          "x": 1627323120000,
          "y": 0.0055,
        },
        Object {
          "x": 1627323180000,
          "y": 0.002,
        },
        Object {
          "x": 1627323240000,
          "y": 0.0015,
        },
        Object {
          "x": 1627323300000,
          "y": 0.0025,
        },
        Object {
          "x": 1627323360000,
          "y": 0.0015,
        },
        Object {
          "x": 1627323420000,
          "y": null,
        },
      ],
      "errorRate": Array [
        Object {
          "x": 1627322520000,
          "y": 0.0588235294117647,
        },
        Object {
          "x": 1627322580000,
          "y": 0,
        },
        Object {
          "x": 1627322640000,
          "y": 0,
        },
        Object {
          "x": 1627322700000,
          "y": 0,
        },
        Object {
          "x": 1627322760000,
          "y": 0,
        },
        Object {
          "x": 1627322820000,
          "y": 0.05,
        },
        Object {
          "x": 1627322880000,
          "y": 0,
        },
        Object {
          "x": 1627322940000,
          "y": 0,
        },
        Object {
          "x": 1627323000000,
          "y": 0,
        },
        Object {
          "x": 1627323060000,
          "y": 0,
        },
        Object {
          "x": 1627323120000,
          "y": 0.0869565217391304,
        },
        Object {
          "x": 1627323180000,
          "y": 0.0294117647058824,
        },
        Object {
          "x": 1627323240000,
          "y": 0.032258064516129,
        },
        Object {
          "x": 1627323300000,
          "y": 0.0294117647058824,
        },
        Object {
          "x": 1627323360000,
          "y": 0,
        },
        Object {
          "x": 1627323420000,
          "y": null,
        },
      ],
      "latency": Array [
        Object {
          "x": 1627322520000,
          "y": 5535261.66666667,
        },
        Object {
          "x": 1627322580000,
          "y": 22946.5555555556,
        },
        Object {
          "x": 1627322640000,
          "y": 6286,
        },
        Object {
          "x": 1627322700000,
          "y": 9496.6,
        },
        Object {
          "x": 1627322760000,
          "y": 7892.71428571429,
        },
        Object {
          "x": 1627322820000,
          "y": 7639,
        },
        Object {
          "x": 1627322880000,
          "y": 9644.6,
        },
        Object {
          "x": 1627322940000,
          "y": 13959,
        },
        Object {
          "x": 1627323000000,
          "y": 15325,
        },
        Object {
          "x": 1627323060000,
          "y": 8428.71428571429,
        },
        Object {
          "x": 1627323120000,
          "y": 14596.3333333333,
        },
        Object {
          "x": 1627323180000,
          "y": 6587.8,
        },
        Object {
          "x": 1627323240000,
          "y": 6794.55555555556,
        },
        Object {
          "x": 1627323300000,
          "y": 10241.9090909091,
        },
        Object {
          "x": 1627323360000,
          "y": 7455,
        },
        Object {
          "x": 1627323420000,
          "y": null,
        },
      ],
      "memoryUsage": Array [
        Object {
          "x": 1627322520000,
          "y": 0.928024291992188,
        },
        Object {
          "x": 1627322580000,
          "y": 0.928298950195313,
        },
        Object {
          "x": 1627322640000,
          "y": 0.9285888671875,
        },
        Object {
          "x": 1627322700000,
          "y": 0.928741455078125,
        },
        Object {
          "x": 1627322760000,
          "y": 0.928936004638672,
        },
        Object {
          "x": 1627322820000,
          "y": 0.929203033447266,
        },
        Object {
          "x": 1627322880000,
          "y": 0.929569244384766,
        },
        Object {
          "x": 1627322940000,
          "y": 0.929962158203125,
        },
        Object {
          "x": 1627323000000,
          "y": 0.930320739746094,
        },
        Object {
          "x": 1627323060000,
          "y": 0.930568695068359,
        },
        Object {
          "x": 1627323120000,
          "y": 0.918880462646484,
        },
        Object {
          "x": 1627323180000,
          "y": 0.919136047363281,
        },
        Object {
          "x": 1627323240000,
          "y": 0.919437408447266,
        },
        Object {
          "x": 1627323300000,
          "y": 0.919727325439453,
        },
        Object {
          "x": 1627323360000,
          "y": 0.919960021972656,
        },
        Object {
          "x": 1627323420000,
          "y": null,
        },
      ],
      "serviceNodeName": "974d235c34fe915c11a0dbebc96688ad6c103ff7bbad4be82607b39e41a0e332",
      "throughput": Array [
        Object {
          "x": 1627322520000,
          "y": 34,
        },
        Object {
          "x": 1627322580000,
          "y": 23,
        },
        Object {
          "x": 1627322640000,
          "y": 33,
        },
        Object {
          "x": 1627322700000,
          "y": 11,
        },
        Object {
          "x": 1627322760000,
          "y": 24,
        },
        Object {
          "x": 1627322820000,
          "y": 20,
        },
        Object {
          "x": 1627322880000,
          "y": 40,
        },
        Object {
          "x": 1627322940000,
          "y": 28,
        },
        Object {
          "x": 1627323000000,
          "y": 20,
        },
        Object {
          "x": 1627323060000,
          "y": 23,
        },
        Object {
          "x": 1627323120000,
          "y": 23,
        },
        Object {
          "x": 1627323180000,
          "y": 34,
        },
        Object {
          "x": 1627323240000,
          "y": 31,
        },
        Object {
          "x": 1627323300000,
          "y": 34,
        },
        Object {
          "x": 1627323360000,
          "y": 17,
        },
        Object {
          "x": 1627323420000,
          "y": 0,
        },
      ],
    },
  },
  "previousPeriod": Object {
    "974d235c34fe915c11a0dbebc96688ad6c103ff7bbad4be82607b39e41a0e332": Object {
      "cpuUsage": Array [
        Object {
          "x": 1627322520000,
          "y": 0.002,
        },
        Object {
          "x": 1627322580000,
          "y": 0.002,
        },
        Object {
          "x": 1627322640000,
          "y": 0.0015,
        },
        Object {
          "x": 1627322700000,
          "y": 0.0015,
        },
        Object {
          "x": 1627322760000,
          "y": 0.002,
        },
        Object {
          "x": 1627322820000,
          "y": 0.0035,
        },
        Object {
          "x": 1627322880000,
          "y": 0.0015,
        },
        Object {
          "x": 1627322940000,
          "y": 0.0015,
        },
        Object {
          "x": 1627323000000,
          "y": 0.0015,
        },
        Object {
          "x": 1627323060000,
          "y": 0.002,
        },
        Object {
          "x": 1627323120000,
          "y": 0.0015,
        },
        Object {
          "x": 1627323180000,
          "y": 0.002,
        },
        Object {
          "x": 1627323240000,
          "y": 0.0015,
        },
        Object {
          "x": 1627323300000,
          "y": 0.002,
        },
        Object {
          "x": 1627323360000,
          "y": 0.002,
        },
        Object {
          "x": 1627323420000,
          "y": null,
        },
      ],
      "errorRate": Array [
        Object {
          "x": 1627322520000,
          "y": 0.0227272727272727,
        },
        Object {
          "x": 1627322580000,
          "y": 0.0526315789473684,
        },
        Object {
          "x": 1627322640000,
          "y": 0.0208333333333333,
        },
        Object {
          "x": 1627322700000,
          "y": 0,
        },
        Object {
          "x": 1627322760000,
          "y": 0,
        },
        Object {
          "x": 1627322820000,
          "y": 0.027027027027027,
        },
        Object {
          "x": 1627322880000,
          "y": 0,
        },
        Object {
          "x": 1627322940000,
          "y": 0,
        },
        Object {
          "x": 1627323000000,
          "y": 0.0434782608695652,
        },
        Object {
          "x": 1627323060000,
          "y": 0.0540540540540541,
        },
        Object {
          "x": 1627323120000,
          "y": 0,
        },
        Object {
          "x": 1627323180000,
          "y": 0,
        },
        Object {
          "x": 1627323240000,
          "y": 0,
        },
        Object {
          "x": 1627323300000,
          "y": 0.0158730158730159,
        },
        Object {
          "x": 1627323360000,
          "y": 0.0425531914893617,
        },
        Object {
          "x": 1627323420000,
          "y": null,
        },
      ],
      "latency": Array [
        Object {
          "x": 1627322520000,
          "y": 12066.7647058824,
        },
        Object {
          "x": 1627322580000,
          "y": 3013754.63636364,
        },
        Object {
          "x": 1627322640000,
          "y": 29797,
        },
        Object {
          "x": 1627322700000,
          "y": 6156.71428571429,
        },
        Object {
          "x": 1627322760000,
          "y": 9551,
        },
        Object {
          "x": 1627322820000,
          "y": 608954.2,
        },
        Object {
          "x": 1627322880000,
          "y": 6559,
        },
        Object {
          "x": 1627322940000,
          "y": 1400303,
        },
        Object {
          "x": 1627323000000,
          "y": 5513,
        },
        Object {
          "x": 1627323060000,
          "y": 9405.5,
        },
        Object {
          "x": 1627323120000,
          "y": 7024.33333333333,
        },
        Object {
          "x": 1627323180000,
          "y": 7139,
        },
        Object {
          "x": 1627323240000,
          "y": 6862.2,
        },
        Object {
          "x": 1627323300000,
          "y": 6661.15384615385,
        },
        Object {
          "x": 1627323360000,
          "y": 11059.9523809524,
        },
        Object {
          "x": 1627323420000,
          "y": null,
        },
      ],
      "memoryUsage": Array [
        Object {
          "x": 1627322520000,
          "y": 0.922969818115234,
        },
        Object {
          "x": 1627322580000,
          "y": 0.923591613769531,
        },
        Object {
          "x": 1627322640000,
          "y": 0.923999786376953,
        },
        Object {
          "x": 1627322700000,
          "y": 0.924209594726563,
        },
        Object {
          "x": 1627322760000,
          "y": 0.924606323242188,
        },
        Object {
          "x": 1627322820000,
          "y": 0.924968719482422,
        },
        Object {
          "x": 1627322880000,
          "y": 0.924964904785156,
        },
        Object {
          "x": 1627322940000,
          "y": 0.924888610839844,
        },
        Object {
          "x": 1627323000000,
          "y": 0.925113677978516,
        },
        Object {
          "x": 1627323060000,
          "y": 0.92559814453125,
        },
        Object {
          "x": 1627323120000,
          "y": 0.925765991210938,
        },
        Object {
          "x": 1627323180000,
          "y": 0.926067352294922,
        },
        Object {
          "x": 1627323240000,
          "y": 0.926486968994141,
        },
        Object {
          "x": 1627323300000,
          "y": 0.927085876464844,
        },
        Object {
          "x": 1627323360000,
          "y": 0.927669525146484,
        },
        Object {
          "x": 1627323420000,
          "y": null,
        },
      ],
      "serviceNodeName": "974d235c34fe915c11a0dbebc96688ad6c103ff7bbad4be82607b39e41a0e332",
      "throughput": Array [
        Object {
          "x": 1627322520000,
          "y": 44,
        },
        Object {
          "x": 1627322580000,
          "y": 57,
        },
        Object {
          "x": 1627322640000,
          "y": 48,
        },
        Object {
          "x": 1627322700000,
          "y": 15,
        },
        Object {
          "x": 1627322760000,
          "y": 29,
        },
        Object {
          "x": 1627322820000,
          "y": 37,
        },
        Object {
          "x": 1627322880000,
          "y": 10,
        },
        Object {
          "x": 1627322940000,
          "y": 14,
        },
        Object {
          "x": 1627323000000,
          "y": 23,
        },
        Object {
          "x": 1627323060000,
          "y": 37,
        },
        Object {
          "x": 1627323120000,
          "y": 31,
        },
        Object {
          "x": 1627323180000,
          "y": 39,
        },
        Object {
          "x": 1627323240000,
          "y": 37,
        },
        Object {
          "x": 1627323300000,
          "y": 63,
        },
        Object {
          "x": 1627323360000,
          "y": 47,
        },
        Object {
          "x": 1627323420000,
          "y": 0,
        },
      ],
    },
  },
}
`;

exports[`APM API tests basic apm_8.0.0 Service overview instances detailed statistics when data is loaded fetching data without comparison returns the right data 3`] = `
Object {
  "currentPeriod": Object {
    "974d235c34fe915c11a0dbebc96688ad6c103ff7bbad4be82607b39e41a0e332": Object {
      "cpuUsage": Array [
        Object {
          "x": 1627321620000,
          "y": 0.002,
        },
        Object {
          "x": 1627321680000,
          "y": 0.002,
        },
        Object {
          "x": 1627321740000,
          "y": 0.0015,
        },
        Object {
          "x": 1627321800000,
          "y": 0.0015,
        },
        Object {
          "x": 1627321860000,
          "y": 0.002,
        },
        Object {
          "x": 1627321920000,
          "y": 0.0035,
        },
        Object {
          "x": 1627321980000,
          "y": 0.0015,
        },
        Object {
          "x": 1627322040000,
          "y": 0.0015,
        },
        Object {
          "x": 1627322100000,
          "y": 0.0015,
        },
        Object {
          "x": 1627322160000,
          "y": 0.002,
        },
        Object {
          "x": 1627322220000,
          "y": 0.0015,
        },
        Object {
          "x": 1627322280000,
          "y": 0.002,
        },
        Object {
          "x": 1627322340000,
          "y": 0.0015,
        },
        Object {
          "x": 1627322400000,
          "y": 0.002,
        },
        Object {
          "x": 1627322460000,
          "y": 0.002,
        },
        Object {
          "x": 1627322520000,
          "y": 0.0015,
        },
        Object {
          "x": 1627322580000,
          "y": 0.001,
        },
        Object {
          "x": 1627322640000,
          "y": 0.002,
        },
        Object {
          "x": 1627322700000,
          "y": 0.001,
        },
        Object {
          "x": 1627322760000,
          "y": 0.0015,
        },
        Object {
          "x": 1627322820000,
          "y": 0.0015,
        },
        Object {
          "x": 1627322880000,
          "y": 0.002,
        },
        Object {
          "x": 1627322940000,
          "y": 0.0025,
        },
        Object {
          "x": 1627323000000,
          "y": 0.004,
        },
        Object {
          "x": 1627323060000,
          "y": 0.0015,
        },
        Object {
          "x": 1627323120000,
          "y": 0.0055,
        },
        Object {
          "x": 1627323180000,
          "y": 0.002,
        },
        Object {
          "x": 1627323240000,
          "y": 0.0015,
        },
        Object {
          "x": 1627323300000,
          "y": 0.0025,
        },
        Object {
          "x": 1627323360000,
          "y": 0.0015,
        },
        Object {
          "x": 1627323420000,
          "y": null,
        },
      ],
      "errorRate": Array [
        Object {
          "x": 1627321620000,
          "y": 0.0227272727272727,
        },
        Object {
          "x": 1627321680000,
          "y": 0.0526315789473684,
        },
        Object {
          "x": 1627321740000,
          "y": 0.0208333333333333,
        },
        Object {
          "x": 1627321800000,
          "y": 0,
        },
        Object {
          "x": 1627321860000,
          "y": 0,
        },
        Object {
          "x": 1627321920000,
          "y": 0.027027027027027,
        },
        Object {
          "x": 1627321980000,
          "y": 0,
        },
        Object {
          "x": 1627322040000,
          "y": 0,
        },
        Object {
          "x": 1627322100000,
          "y": 0.0434782608695652,
        },
        Object {
          "x": 1627322160000,
          "y": 0.0540540540540541,
        },
        Object {
          "x": 1627322220000,
          "y": 0,
        },
        Object {
          "x": 1627322280000,
          "y": 0,
        },
        Object {
          "x": 1627322340000,
          "y": 0,
        },
        Object {
          "x": 1627322400000,
          "y": 0.0158730158730159,
        },
        Object {
          "x": 1627322460000,
          "y": 0.0425531914893617,
        },
        Object {
          "x": 1627322520000,
          "y": 0.0588235294117647,
        },
        Object {
          "x": 1627322580000,
          "y": 0,
        },
        Object {
          "x": 1627322640000,
          "y": 0,
        },
        Object {
          "x": 1627322700000,
          "y": 0,
        },
        Object {
          "x": 1627322760000,
          "y": 0,
        },
        Object {
          "x": 1627322820000,
          "y": 0.05,
        },
        Object {
          "x": 1627322880000,
          "y": 0,
        },
        Object {
          "x": 1627322940000,
          "y": 0,
        },
        Object {
          "x": 1627323000000,
          "y": 0,
        },
        Object {
          "x": 1627323060000,
          "y": 0,
        },
        Object {
          "x": 1627323120000,
          "y": 0.0869565217391304,
        },
        Object {
          "x": 1627323180000,
          "y": 0.0294117647058824,
        },
        Object {
          "x": 1627323240000,
          "y": 0.032258064516129,
        },
        Object {
          "x": 1627323300000,
          "y": 0.0294117647058824,
        },
        Object {
          "x": 1627323360000,
          "y": 0,
        },
        Object {
          "x": 1627323420000,
          "y": null,
        },
      ],
      "latency": Array [
        Object {
          "x": 1627321620000,
          "y": 12066.7647058824,
        },
        Object {
          "x": 1627321680000,
          "y": 3013754.63636364,
        },
        Object {
          "x": 1627321740000,
          "y": 29797,
        },
        Object {
          "x": 1627321800000,
          "y": 6156.71428571429,
        },
        Object {
          "x": 1627321860000,
          "y": 9551,
        },
        Object {
          "x": 1627321920000,
          "y": 608954.2,
        },
        Object {
          "x": 1627321980000,
          "y": 6559,
        },
        Object {
          "x": 1627322040000,
          "y": 1400303,
        },
        Object {
          "x": 1627322100000,
          "y": 5513,
        },
        Object {
          "x": 1627322160000,
          "y": 9405.5,
        },
        Object {
          "x": 1627322220000,
          "y": 7024.33333333333,
        },
        Object {
          "x": 1627322280000,
          "y": 7139,
        },
        Object {
          "x": 1627322340000,
          "y": 6862.2,
        },
        Object {
          "x": 1627322400000,
          "y": 6661.15384615385,
        },
        Object {
          "x": 1627322460000,
          "y": 11059.9523809524,
        },
        Object {
          "x": 1627322520000,
          "y": 5535261.66666667,
        },
        Object {
          "x": 1627322580000,
          "y": 22946.5555555556,
        },
        Object {
          "x": 1627322640000,
          "y": 6286,
        },
        Object {
          "x": 1627322700000,
          "y": 9496.6,
        },
        Object {
          "x": 1627322760000,
          "y": 7892.71428571429,
        },
        Object {
          "x": 1627322820000,
          "y": 7639,
        },
        Object {
          "x": 1627322880000,
          "y": 9644.6,
        },
        Object {
          "x": 1627322940000,
          "y": 13959,
        },
        Object {
          "x": 1627323000000,
          "y": 15325,
        },
        Object {
          "x": 1627323060000,
          "y": 8428.71428571429,
        },
        Object {
          "x": 1627323120000,
          "y": 14596.3333333333,
        },
        Object {
          "x": 1627323180000,
          "y": 6587.8,
        },
        Object {
          "x": 1627323240000,
          "y": 6794.55555555556,
        },
        Object {
          "x": 1627323300000,
          "y": 10241.9090909091,
        },
        Object {
          "x": 1627323360000,
          "y": 7455,
        },
        Object {
          "x": 1627323420000,
          "y": null,
        },
      ],
      "memoryUsage": Array [
        Object {
          "x": 1627321620000,
          "y": 0.922969818115234,
        },
        Object {
          "x": 1627321680000,
          "y": 0.923591613769531,
        },
        Object {
          "x": 1627321740000,
          "y": 0.923999786376953,
        },
        Object {
          "x": 1627321800000,
          "y": 0.924209594726563,
        },
        Object {
          "x": 1627321860000,
          "y": 0.924606323242188,
        },
        Object {
          "x": 1627321920000,
          "y": 0.924968719482422,
        },
        Object {
          "x": 1627321980000,
          "y": 0.924964904785156,
        },
        Object {
          "x": 1627322040000,
          "y": 0.924888610839844,
        },
        Object {
          "x": 1627322100000,
          "y": 0.925113677978516,
        },
        Object {
          "x": 1627322160000,
          "y": 0.92559814453125,
        },
        Object {
          "x": 1627322220000,
          "y": 0.925765991210938,
        },
        Object {
          "x": 1627322280000,
          "y": 0.926067352294922,
        },
        Object {
          "x": 1627322340000,
          "y": 0.926486968994141,
        },
        Object {
          "x": 1627322400000,
          "y": 0.927085876464844,
        },
        Object {
          "x": 1627322460000,
          "y": 0.927669525146484,
        },
        Object {
          "x": 1627322520000,
          "y": 0.928024291992188,
        },
        Object {
          "x": 1627322580000,
          "y": 0.928298950195313,
        },
        Object {
          "x": 1627322640000,
          "y": 0.9285888671875,
        },
        Object {
          "x": 1627322700000,
          "y": 0.928741455078125,
        },
        Object {
          "x": 1627322760000,
          "y": 0.928936004638672,
        },
        Object {
          "x": 1627322820000,
          "y": 0.929203033447266,
        },
        Object {
          "x": 1627322880000,
          "y": 0.929569244384766,
        },
        Object {
          "x": 1627322940000,
          "y": 0.929962158203125,
        },
        Object {
          "x": 1627323000000,
          "y": 0.930320739746094,
        },
        Object {
          "x": 1627323060000,
          "y": 0.930568695068359,
        },
        Object {
          "x": 1627323120000,
          "y": 0.918880462646484,
        },
        Object {
          "x": 1627323180000,
          "y": 0.919136047363281,
        },
        Object {
          "x": 1627323240000,
          "y": 0.919437408447266,
        },
        Object {
          "x": 1627323300000,
          "y": 0.919727325439453,
        },
        Object {
          "x": 1627323360000,
          "y": 0.919960021972656,
        },
        Object {
          "x": 1627323420000,
          "y": null,
        },
      ],
      "serviceNodeName": "974d235c34fe915c11a0dbebc96688ad6c103ff7bbad4be82607b39e41a0e332",
      "throughput": Array [
        Object {
          "x": 1627321620000,
          "y": 44,
        },
        Object {
          "x": 1627321680000,
          "y": 57,
        },
        Object {
          "x": 1627321740000,
          "y": 48,
        },
        Object {
          "x": 1627321800000,
          "y": 15,
        },
        Object {
          "x": 1627321860000,
          "y": 29,
        },
        Object {
          "x": 1627321920000,
          "y": 37,
        },
        Object {
          "x": 1627321980000,
          "y": 10,
        },
        Object {
          "x": 1627322040000,
          "y": 14,
        },
        Object {
          "x": 1627322100000,
          "y": 23,
        },
        Object {
          "x": 1627322160000,
          "y": 37,
        },
        Object {
          "x": 1627322220000,
          "y": 31,
        },
        Object {
          "x": 1627322280000,
          "y": 39,
        },
        Object {
          "x": 1627322340000,
          "y": 37,
        },
        Object {
          "x": 1627322400000,
          "y": 63,
        },
        Object {
          "x": 1627322460000,
          "y": 47,
        },
        Object {
          "x": 1627322520000,
          "y": 34,
        },
        Object {
          "x": 1627322580000,
          "y": 23,
        },
        Object {
          "x": 1627322640000,
          "y": 33,
        },
        Object {
          "x": 1627322700000,
          "y": 11,
        },
        Object {
          "x": 1627322760000,
          "y": 24,
        },
        Object {
          "x": 1627322820000,
          "y": 20,
        },
        Object {
          "x": 1627322880000,
          "y": 40,
        },
        Object {
          "x": 1627322940000,
          "y": 28,
        },
        Object {
          "x": 1627323000000,
          "y": 20,
        },
        Object {
          "x": 1627323060000,
          "y": 23,
        },
        Object {
          "x": 1627323120000,
          "y": 23,
        },
        Object {
          "x": 1627323180000,
          "y": 34,
        },
        Object {
          "x": 1627323240000,
          "y": 31,
        },
        Object {
          "x": 1627323300000,
          "y": 34,
        },
        Object {
          "x": 1627323360000,
          "y": 17,
        },
        Object {
          "x": 1627323420000,
          "y": 0,
        },
      ],
    },
  },
  "previousPeriod": Object {},
}
`;
